fleet/node-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api
  labels:
    app: node-api
spec:
  selector:
    app: node-api
  ports:
    - name: http
      port: 80
      targetPort: http
