fleet/node-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-api
  labels:
    app: node-api
spec:
  rules:
    - host: node-api.192-168-1-103.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 80
